--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -6,8 +7,7 @@
         </title>
     </head>
     <body>
-        <h1> Jared DeVault
-        </h1>
+        <h1>Jared DeVault</h1>
         <p> This is some sample text in my first html paragraph.</p>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt esse officiis suscipit perferendis! Distinctio commodi libero reiciendis in! Modi doloribus et incidunt ad! Ipsam animi doloremque fugit natus, earum tempore?</p>
     </body>
