--- a/test_directory/index.html
+++ b/test_directory/index.html
@@ -9,6 +9,11 @@
         <h1>
             Jared DeVault
         </h1>
-        <p>Jared's Test Directory!</p>
+        <h2>
+            This is a new subtitle I added.
+        </h2>
+        <p>
+            Jared's Test Directory!
+        </p>
     </body>
 </html>
