--- a/assignment05/pages/page1.html
+++ b/assignment05/pages/page1.html
@@ -10,9 +10,10 @@
 
         <p> 
         Dean Hughes is an American author of historical novels
-        and books for children. He is most well known his World War II
-        historical series, <i>Chldren of the Promise</i>.
+        and books for children. He is most well known his World War II historical series, <i>Chldren of the Promise</i>.
         </p>
-        
+
+        <img src ="https://mappingliteraryutah.org/media/k2/items/cache/1215174_XL.jpg" alt = "Image of Dean Hughes"
+        <a href = "../index.html">this link goes back to the index</a>
     </body>
 </html>
