--- a/assignment05/index.html
+++ b/assignment05/index.html
@@ -2,13 +2,29 @@
 <html>
     <head>
         <title>
-            Assignment 5 Site
+            Dean Hughe's <i>Soldier Boys</i>
         </title>
     </head>
     <body>
         <h1>
-            Jared DeVault Assignment 5
+            <i>Soldier Boys</i>
         </h1>
+        <h2> Dean Hughes</h2> 
+        <hr>
+    </p>
+        <p>
+            <i>Soldier Boys</i> by Dean Hughes is a young adult historical fiction novel that tells the story of two teenage boys from opposite sides of World War II. Spencer Morgan is an American soldier, while Dieter Hedrick is a German soldier.
+        </p>
+        <p>
+            The novel explores the experiences of these two boys as they find themselves thrust into the brutality of war. Spencer, eager to prove himself and motivated by a sense of duty, faces the challenges of combat on the Western Front. Dieter, indoctrinated into the Hitler Youth, begins to question the ideology he's been raised with as he witnesses the harsh realities of war.
+        </p>
+        <p>
+            The narrative alternates between the perspectives of Spencer and Dieter, providing insight into the thoughts and emotions of both characters. The book depicts the impact of war on youth, exploring the psychological and physical toll it takes on these young soldiers.
+        </p>
+        <p>
+            <i>Soldier Boys</i> adresses themes such as the complexities of morality in war, the bonds formed in the crucible of combat, and the personal growth and transformation of individuals facing the harsh realities of armed conflict. It offers a nuanced portrayal of the challenges faced by young people on both sides of the conflict, providing readers with a compelling and thought-provoking exploration of World War II from the perspective of two teenagers caught in the midst of it.
+        </p>
+        <hr>
+        <a href="./pages/page1.html">click her for a picture of Dean Hughes</a>
     </body>
-
 </html>
