--- a/assignment06/index.html
+++ b/assignment06/index.html
@@ -47,7 +47,7 @@
         <h2>About the Build</h2>
         <p>This is an outline for a custom offroad build project of a Honda Grom, transforming it into a capable offroad machine for adventurous rides.</p>
     </section>
-    <img src="https://github.com/jareddevault/webdesignhw/blob/main/assignment06/images/sei_grom.jpg" height="50%" alt="Off Road Honda Grom by Talon Sei"
+    <img src="https://raw.githubusercontent.com/jareddevault/webdesignhw/main/assignment06/images/sei_grom.jpg" height="50%" alt="Off Road Honda Grom by Talon Sei"
     <section>
         <p><i>2022 Honda Grom by Talon Sei: The inspiration for my build.</i></p>
         <h2>Essential Modifications</h2>
