--- a/assignment06/index.html
+++ b/assignment06/index.html
@@ -5,7 +5,7 @@
     <!-- Define character set used-->
     <meta charset="UTF-8">
     <!-- Define page description-->
-    <meta name="author" content="Jared DeVault"
+    <meta name="author" content="Jared DeVault">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
@@ -47,27 +47,36 @@
         <h2>About the Build</h2>
         <p>This is an outline for a custom offroad build project of a Honda Grom, transforming it into a capable offroad machine for adventurous rides.</p>
     </section>
-    <img src="https://raw.githubusercontent.com/jareddevault/webdesignhw/main/assignment06/images/sei_grom.jpg" height="50%" alt="Off Road Honda Grom by Talon Sei"
+
+    <section>
+    <img src="https://raw.githubusercontent.com/jareddevault/webdesignhw/main/assignment06/images/sei_grom.jpg" height="50%" alt="Off Road Honda Grom by Talon Sei">
     <section>
         <p><i>2022 Honda Grom by Talon Sei: The inspiration for my build.</i></p>
+        <!-- This section is for modificaitons necessary to off-roading -->
         <h2>Essential Modifications</h2>
         <ul>
-            <li><strong>Knobby Tires:</strong> Kenda Big Block tires will make for a much more off-road capable machine.</li>
+            <li><strong>Knobby Tires:</strong> <a href="https://powersports.kendatire.com/en-us/find-a-tire/motorcyclescooter/dual-sportadventure/big-block/">Kenda Big Block</a> tires will make for a much more off-road capable machine. <i style="color:gray"> Shinko Mobber tires would be a great alternative.</i>  </li>
             <li><strong>Skid Plate:</strong> A skid plate to protect the engine and undercarriage from rocks and debris.</li>
             <li><strong>Handguards:</strong> Equipped with durable handguards for hand protection during offroad rides.</li>
             <li><strong>LED Offroad Lights:</strong> Installed powerful LED lights for enhanced visibility on trails.</li>
             <li><strong>Tail Tidy Kit:</strong> A "tail tidy" removes the stock rear fender, making for a cleaner look.</li>
+            <li><strong>Foot Pegs:</strong> Wider foot pegs to keep your feet in place on bumpy roads.</li>
         </ul>
     </section>
 
     <section>
-        <h2>Photo Gallery</h2>
-        <!-- Add more images as needed -->
+        <h2>Power Mods</h2>
+        <li><strong>Camshaft:</strong> A replacement camshaft will increase availbe power.</li>
+        <li><strong>Exhaust:</strong> A new exhaust will be required to compliment the camshaft.</li>
+        <li><strong>Intake:</strong> A more effecient intake will also compliment the camshaft.</li>
+        <li><strong>ECU Reflash:</strong> The final requirement to complete the power mods would be an ECU reflash.</li>
+        <!-- A place for engine modifications that are not necessary -->
     </section>
 
     <section>
-        <h2>Contact Us</h2>
-        <p>For more information about the offroad Honda Grom build, contact us at <a href="mailto:info@offroadgrom.com">info@offroadgrom.com</a>.</p>
+        <h2>Contact</h2>
+        <p>For any suggestions or resources, contact me <a href="mailto:jared.devault@umconnect.umt.edu">here</a>.</p>
+        <p>Talon Sei's part list can be found on his website <a href="https://seiproductions.com/seigarage">Sei Garage</a>.</p>
     </section>
 
 </body>
