--- a/assignment08/index.html
+++ b/assignment08/index.html
@@ -19,11 +19,13 @@
             
             }
             .song-title {
-                font-style: italic;
+                font-style: bold;
+                font-style: oblique;
             }
             .lyrics {
                 background-color: aliceblue;
                 border: 2pt solid rgb(61, 122, 141);
+                font-style: italic;
             }
         </style>
 </head>
