edits to hover and text

--- a/assignment11/index.html
+++ b/assignment11/index.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <link rel="stylesheet" href="./css/fonts.css" type="text/css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Seymour+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="title">
@@ -19,6 +22,7 @@
         <p>Overlanding for most people is a way to experience remote areas of wilderness, not readily accessible without a vehicle. Overlanding is certainly not viewed the same as backpacking, and receives criticism from some regarding the reliance on a vehicle. For most "overlanders" the vehicle is a large part of their interest. Outfitting your vehicle to help sustian you, and live comfortably in remote areas is a huge part of the draw. Overlanders are strong proponents of leave no trace, and will always stick to established trail systems.
         </p>
         <p> While one in theory could overland in any vehicle, you should consider these themes when seeking to thrive. <b>Offroad capability</b> does not mean the capability to plow through protected wilderness, but instead referes to making a vehicle capable of rough terrain that is far from pavement. The seldom traveled trails often feature large rocks, water crossings, mud, and any combination of nature's obsticals. A vehicle with high ground clearance, grippy tires, and with four-wheel drive, is required for many of these trails.</p>
+        <p>My personal favorite aspect of overlanding is cooking and eating in the outdoors. Many Overland vehicles are setup with complext <span id="kitchen"> <b>food preparation areas</b></span>.</p>
     </div>
 </body>    
 </html>
